currency_cod en checkout y split

--- a/produccion/redireccion/index.html
+++ b/produccion/redireccion/index.html
@@ -16,7 +16,7 @@
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
         crossorigin="anonymous"
     ></script>
-    <script type="text/javascript" src="https://epayco-checkout-testing.s3.amazonaws.com/checkout.testing.js"> </script>
+    <script type="text/javascript" src="https://checkout.epayco.co/checkout.js"> </script>
     <script>
     const openCheckout = function () {
 
