--- a/local/boton_abierto/campos_completos/index.html
+++ b/local/boton_abierto/campos_completos/index.html
@@ -1,3 +1,23 @@
+
+<form id="frm_ePaycoCheckoutOpen" 
+name="frm_ePaycoCheckoutOpen" 
+method="POST" 
+action="https://secure.payco.co/checkoutopen.php">
+
+<input name="p_cust_id_cliente" type="hidden" value="33487"/>
+<input name="p_key" type="hidden" value="778ab0ca5a46d139398dfedc9b75eff2c96f6b61"/>
+<input name="p_id_factura" type="hidden" value=""/>
+<input name="p_description" type="hidden" value="titulo"/>
+<input name="p_detalle" type="hidden" value="descripcion completa"/>
+<input name="p_referencia" type="hidden" value="ref01232433"/>
+<input name="p_test_request" type="hidden" value="false"/>
+<input name="p_url_respuesta" type="hidden" value="http://codigoatomico.com/payments/produccion/estado_pse/response.php"/>
+<input name="p_url_confirmacion" type="hidden" value="http://codigoatomico.com/payments/produccion/estado_pse/confirmation.php"/>
+<input type="image" id="imagen" src="https://369969691f476073508a-60bf0867add971908d4f26a64519c2aa.ssl.cf5.rackcdn.com/btns/btn1.png" alt=""/>
+<input type="hidden" id="idboton" name="idboton" value="36253"/>
+                  
+</form> <!-- ================================================================== -->
+
 <!-- =====================================================================
           ///////////   Este es su botón de Pago Abierto ePayco   ///////////
          ===================================================================== -->
