--- a/testing/datos_vacios/index.html
+++ b/testing/datos_vacios/index.html
@@ -22,7 +22,7 @@
 
         const handler = ePayco.checkout.configure({
         key: '2f48ea347518e2f96a6592f6a07ee4dd',
-        test: false
+        test: true
         })
         
         let data = {
