--- a/testing/certificacion_pse/index.html
+++ b/testing/certificacion_pse/index.html
@@ -62,7 +62,7 @@
                     response: "https://epayco.co",
                     tax: 0,
                     tax_base: 0,
-                    external: "true",
+                    external: external,
                     //Atributos cliente
                     name_billing: "John Doe",
                     address_billing: "Carrera 19 numero 14 91",
