--- a/testing/certificacion_pse/index.html
+++ b/testing/certificacion_pse/index.html
@@ -26,18 +26,18 @@
                             <div class="p-3">
                                 <div class="mb-3">
                                     <label for="monto" class="form-label">LLave publica</label>
-                                    <input type="email" class="form-control" id="llaves" aria-describedby="emailHelp">
+                                    <input type="text" class="form-control" id="llaves" aria-describedby="emailHelp">
                                     <div id="emailHelp" class="form-text">Llaves publicas de un comercio cualquiera
                                     </div>
                                 </div>
                                 <div class="mb-3">
                                     <label for="name" class="form-label">Nombre</label>
-                                    <input type="email" class="form-control" id="nombre" aria-describedby="emailHelp">
+                                    <input type="text" class="form-control" id="nombre" aria-describedby="emailHelp">
                                     <div id="emailHelp" class="form-text">Nombre del pago</div>
                                 </div>
                                 <div class="mb-3">
                                     <label for="name" class="form-label">Descripcion</label>
-                                    <input type="email" class="form-control" id="descripcion"
+                                    <input type="text" class="form-control" id="descripcion"
                                         aria-describedby="emailHelp">
                                     <div id="emailHelp" class="form-text">Descripcion del pago</div>
                                 </div>
@@ -48,12 +48,12 @@
                         <div class="col">
                             <div class="mb-3">
                                 <label for="name" class="form-label">Factura</label>
-                                <input type="email" class="form-control" id="factura" aria-describedby="emailHelp">
+                                <input type="text" class="form-control" id="factura" aria-describedby="emailHelp">
                                 <div id="emailHelp" class="form-text">Nombre de Factura</div>
                             </div>
                             <div class="mb-3">
                                 <label for="monto" class="form-label">Ingresar monto</label>
-                                <input type="email" class="form-control" id="monto" aria-describedby="emailHelp">
+                                <input type="number" class="form-control" id="monto" aria-describedby="emailHelp">
                                 <div id="emailHelp" class="form-text">Valor de la transacción</div>
                             </div>
                             <div class="p-3  ">
