--- a/testing/certificacion_pse/index.html
+++ b/testing/certificacion_pse/index.html
@@ -56,6 +56,24 @@
                                 <input type="number" class="form-control" id="monto" aria-describedby="emailHelp">
                                 <div id="emailHelp" class="form-text">Valor de la transacción</div>
                             </div>
+
+                            <div class="mb-3">
+                                <label for="monto" class="form-label">Ingresar base iva</label>
+                                <input type="number" class="form-control" id="tax_base" aria-describedby="emailHelp">
+                                <div id="emailHelp" class="form-text">Valor de base iva</div>
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="monto" class="form-label">Ingresar iva</label>
+                                <input type="number" class="form-control" id="tax" aria-describedby="emailHelp">
+                                <div id="emailHelp" class="form-text">Valor de iva</div>
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="monto" class="form-label">Ingresar base ico</label>
+                                <input type="number" class="form-control" id="tax_ico" aria-describedby="emailHelp">
+                                <div id="emailHelp" class="form-text">Valor de base ico</div>
+                            </div>
                             <div class="p-3  ">
                                 <div class="mb-3 form-check">
                                     <input type="checkbox" class="form-check-input" id="dolares">
