--- a/local/certificacion_pse/index.html
+++ b/local/certificacion_pse/index.html
@@ -166,7 +166,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://epayco-checkout-testing.s3.amazonaws.com/checkout.testing.js"></script>    
+        <script type="text/javascript" src="checkout.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </body>
 
