--- a/preproduccion/certificacion_pse/index.html
+++ b/preproduccion/certificacion_pse/index.html
@@ -22,9 +22,9 @@
                 <div class="alert alert-warning d-flex align-items-center" role="alert">
                     <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Warning:"><use xlink:href="#exclamation-triangle-fill"/></svg>
                     <div>
-                        <strong>Ambiente Checkout: </strong>Testing => <a href="https://epayco-checkout-testing.s3.amazonaws.com/checkout.testing.js" target="_blank">https://epayco-checkout-testing.s3.amazonaws.com/checkout.testing.js</a>
+                        <strong>Ambiente Checkout: </strong>Pre produccion => <a href="https://epayco-checkout-testing.s3.amazonaws.com/checkout.preprod.js" target="_blank">https://epayco-checkout-testing.s3.amazonaws.com/checkout.preprod.js</a>
                         <br>
-                        <strong>Base de datos: </strong>Testing
+                        <strong>Base de datos: </strong>Pre produccion
                     </div>
                 </div>
 
@@ -175,7 +175,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://epayco-checkout-testing.s3.amazonaws.com/checkout.testing.js"></script>
+    <script type="text/javascript" src="https://epayco-checkout-testing.s3.amazonaws.com/checkout.preprod.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </body>
 
