--- a/local/certificacion_pse/index.html
+++ b/local/certificacion_pse/index.html
@@ -199,6 +199,39 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="container px-4">
+                    <div class="row gx-5">
+                        <div class="col">
+                            <div class="p-3">
+                                <h6>Comercio Agregador Prod y Preprod</h6>
+                                <span class="badge bg-secondary">ID: 28927</span>
+                                <span class="badge bg-secondary">PublicKey: 99ff0daa89801724a4acf1499134464f</span>
+
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="p-3">
+                                <h6>Checkout Testing</h6>
+                                <button type="button" id="button" class="btn btn-warning"
+                                    onclick="openCheckout('99ff0daa89801724a4acf1499134464f', 'true', 'true')">External</button>
+                                <button type="button" id="button" class="btn btn-warning"
+                                    onclick="openCheckout('99ff0daa89801724a4acf1499134464f', 'true','false')">One
+                                    Page</button>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="p-3">
+                                <h6>Checkout Produccion</h6>
+                                <button type="button" id="button" class="btn btn-success"
+                                    onclick="openCheckout('99ff0daa89801724a4acf1499134464f', 'false', 'true')">External</button>
+                                <button type="button" id="button" class="btn btn-success"
+                                    onclick="openCheckout('99ff0daa89801724a4acf1499134464f', 'false','false')">One
+                                    Page</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
