--- a/local/certificacion_pse/index.html
+++ b/local/certificacion_pse/index.html
@@ -107,6 +107,39 @@
                     <div class="row gx-5">
                         <div class="col">
                             <div class="p-3">
+                                <h6>Comercio Davivienda</h6>
+                                <span class="badge bg-secondary">ID: 50498</span>
+                                <span class="badge bg-secondary">PublicKey: 769d4a1b2f2cbab69604de516f29dacd</span>
+
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="p-3">
+                                <h6>Checkout Testing</h6>
+                                <button type="button" id="button" class="btn btn-warning"
+                                    onclick="openCheckout('769d4a1b2f2cbab69604de516f29dacd', 'true', 'true')">External</button>
+                                <button type="button" id="button" class="btn btn-warning"
+                                    onclick="openCheckout('769d4a1b2f2cbab69604de516f29dacd', 'true','false')">One
+                                    Page</button>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="p-3">
+                                <h6>Checkout Produccion</h6>
+                                <button type="button" id="button" class="btn btn-success"
+                                    onclick="openCheckout('769d4a1b2f2cbab69604de516f29dacd', 'false', 'true')">External</button>
+                                <button type="button" id="button" class="btn btn-success"
+                                    onclick="openCheckout('769d4a1b2f2cbab69604de516f29dacd', 'false','false')">One
+                                    Page</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container px-4">
+                    <div class="row gx-5">
+                        <div class="col">
+                            <div class="p-3">
                                 <h6>Comercio Gateway Movistar</h6>
                                 <span class="badge bg-secondary">ID: 1</span>
                                 <span class="badge bg-secondary">PublicKey: 479f29cc87cb26bdea89e873b5287784</span>
@@ -232,6 +265,8 @@
                         </div>
                     </div>
                 </div>
+
+
             </div>
         </div>
 
