--- a/local/certificacion_pse/index.html
+++ b/local/certificacion_pse/index.html
@@ -266,6 +266,39 @@
                     </div>
                 </div>
 
+                <div class="container px-4">
+                    <div class="row gx-5">
+                        <div class="col">
+                            <div class="p-3">
+                                <h6>Comercio Agregador</h6>
+                                <span class="badge bg-secondary">ID: 41756</span>
+                                <span class="badge bg-secondary">PublicKey: af53f761453860472c77f85b59fccc9a</span>
+
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="p-3">
+                                <h6>Checkout Testing</h6>
+                                <button type="button" id="button" class="btn btn-warning"
+                                    onclick="openCheckout('af53f761453860472c77f85b59fccc9a', 'true', 'true')">External</button>
+                                <button type="button" id="button" class="btn btn-warning"
+                                    onclick="openCheckout('af53f761453860472c77f85b59fccc9a', 'true','false')">One
+                                    Page</button>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="p-3">
+                                <h6>Checkout Produccion</h6>
+                                <button type="button" id="button" class="btn btn-success"
+                                    onclick="openCheckout('af53f761453860472c77f85b59fccc9a', 'false', 'true')">External</button>
+                                <button type="button" id="button" class="btn btn-success"
+                                    onclick="openCheckout('af53f761453860472c77f85b59fccc9a', 'false','false')">One
+                                    Page</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
 
             </div>
         </div>
@@ -276,7 +309,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
         crossorigin="anonymous"></script>
-    <script type="text/javascript" src="checkout.js"></script>
+    <!-- <script type="text/javascript" src="checkout.js"></script> -->
+    <script type="text/javascript" src="checkout_new.js"></script>
     <script type="text/javascript" src="main.js"></script>
 </body>
 
