--- a/produccion/certificacion_pse/index.html
+++ b/produccion/certificacion_pse/index.html
@@ -157,6 +157,39 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="container px-4">
+                    <div class="row gx-5">
+                        <div class="col">
+                            <div class="p-3">
+                                <h6>Comercio Agregador Juan Pablo Hurtado</h6>
+                                <span class="badge bg-secondary">ID: 33487</span>
+                                <span class="badge bg-secondary">PublicKey: b3a73874cf3b69f9c8b80b737ebbaf8c</span>
+
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="p-3">
+                                <h6>Checkout Testing</h6>
+                                <button type="button" id="button" class="btn btn-warning"
+                                    onclick="openCheckout('b3a73874cf3b69f9c8b80b737ebbaf8c', 'true', 'true')">External</button>
+                                <button type="button" id="button" class="btn btn-warning"
+                                    onclick="openCheckout('b3a73874cf3b69f9c8b80b737ebbaf8c', 'true','false')">One
+                                    Page</button>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="p-3">
+                                <h6>Checkout Produccion</h6>
+                                <button type="button" id="button" class="btn btn-success"
+                                    onclick="openCheckout('b3a73874cf3b69f9c8b80b737ebbaf8c', 'false', 'true')">External</button>
+                                <button type="button" id="button" class="btn btn-success"
+                                    onclick="openCheckout('b3a73874cf3b69f9c8b80b737ebbaf8c', 'false','false')">One
+                                    Page</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
